# Marketing

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: settings.yaml
src/: config.py  main.py  orchestrator.py
src/agents/: base.py  copywriter.py  localizer.py  reviewer.py  understander.py
src/cms/: publisher.py
src/models/: content.py  product.py
src/seo/: keywords.py
src/utils/: image.py  logger.py
tests/: test_pipeline.py
