[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mark"
version = "0.1.0"
description = "Cross-border E-commerce Multilingual Marketing Content Factory - Multi-Agent System"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "MIMO Team"}
]
dependencies = [
    "anthropic>=0.39.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.0",
    "aiohttp>=3.9",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
]

[project.scripts]
mimo = "src.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
